// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test test-utils.ts functions buildPreviewTestResultsFromCode returns an error if testCode does not match regex 1`] = `
Object {
  "error": [Error: Unable to extract test messages from test code!],
}
`;

exports[`test test-utils.ts functions buildPreviewTestResultsFromCode successfully builds preview test cases for asynchronous test code 1`] = `
Object {
  "results": Array [
    Object {
      "message": "The \`SpaceX\` class should be defined.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`SpaceX\` class should implement the \`SpaceXClass\` interface and contain all of its methods.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`getCrew\` method should return the data from call the \`/crew\` endpoint.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`getLaunchpads\` method should return the data from call the \`/launchpads\` endpoint.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`getLandpads\` method should return the data from call the \`/landpads\` endpoint.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`getRockets\` method should return the data from call the \`/rockets\` endpoint.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`getShips\` method should return the data from call the \`/ships\` endpoint.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`getStarlink\` method should return the data from call the \`/starlink\` endpoint.",
      "test": "",
      "testResult": false,
    },
  ],
}
`;

exports[`test test-utils.ts functions buildPreviewTestResultsFromCode successfully builds preview test cases for one-liner tests 1`] = `
Object {
  "results": Array [
    Object {
      "message": "The log message text in the \`setTimeout\` should change \`1\` to \`3\`.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "The \`setTimeout\` delay should be changed from \`1000\` milliseconds to \`3000\` milliseconds.",
      "test": "",
      "testResult": false,
    },
  ],
}
`;

exports[`test test-utils.ts functions buildPreviewTestResultsFromCode successfully builds preview test cases for synchronous test code 1`] = `
Object {
  "results": Array [
    Object {
      "message": "A function \`everyNth\` should be defined.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "\`everyNth\` should return \`[]\` given the input \`[1,2,3,4]\` and \`7\`.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "\`everyNth\` should return \`[]\` given the input \`[]\` and \`7\`.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "\`everyNth\` should return \`[3,6,9]\` given the input \`[1,2,3,4,5,6,7,8,9,10]\` and \`3\`.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "\`everyNth\` should return \`[5]\` given the input \`[1,2,3,4,5]\` and \`5\`.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "\`everyNth\` should return \`[1,2,3,4,5,6,7,8]\` given the input \`[1,2,3,4,5,6,7,8]\` and \`1\`.",
      "test": "",
      "testResult": false,
    },
    Object {
      "message": "\`everyNth\` should return \`[10]\` given the input \`[1,2,3,4,5,6,7,8,9,10]\` and \`10\`.",
      "test": "",
      "testResult": false,
    },
  ],
}
`;
